--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,35 @@
   right: -1em;
 }
 
+.bottom_right {
+  right: 1em;
+  bottom: -1.5em;
+  width: 2em;
+  height: 1.2em;
+}
+
+.right_bottom {
+  right: -1.5em;
+  bottom: 1em;
+  width: 1em;
+  height: 2em;
+}
+
+.scaling {
+  position: absolute;
+  border: 1px solid #EEE;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+
+  div {
+    float: left;
+    width: 1em;
+    height: 1em;
+    text-align: center;
+  }
+}
+
 .bottom {
   bottom: -1em;
 }
@@ -52,6 +81,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  font-size: 50px;
   text-align: center;
+  background: rgba(0,0,0,0);
 }
